--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,20 @@ body {
     margin: 0;
 }
 
+ul {
+    list-style-type: none;
+}
+
+span, p.contentText {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+legend {
+    font-size: 25px;
+    font-weight: bold;
+}
+
 aside {
     width: 40%;
     float: left;
@@ -29,11 +43,27 @@ aside {
 .formContainer {
     display: flex;
     gap: 40px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    background-color: #ccc;
+    width: 100%;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+
+    
 }
 
-.btn {
+.bottom {
     align-self:flex-start;
     margin-left: 60px;
 }
 
+.btn {
+    padding: 20px 60px;
+    border-radius: 8px;
+}
 
+.email {
+    margin-left: 10px;
+}
