--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,10 +2,31 @@ body {
     box-sizing: border-box;
     width: 100%;
     margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+.title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+    background-color: rgba(255,255,255,0.5);
+}
+
+h1 {
+    font-size: 72px;
+    color: #FDD023;
+}
+
 
 ul {
     list-style-type: none;
+}
+
+img {
+    width: 100px;
+    height: 150px;
 }
 
 span, p.contentText {
@@ -19,13 +40,16 @@ legend {
 }
 
 aside {
+    display: flex;
     width: 40%;
     float: left;
     height: 100vh;
     text-align: center;
     background-image: url('../images/ben-hershey-qegSxvH9U9Y-unsplash.jpg');
     background-size: cover;
+    justify-content: center;
 }
+
 
 .contentText {
     font-size: 30px;
@@ -43,15 +67,31 @@ aside {
 .formContainer {
     display: flex;
     gap: 40px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    background-color: #ccc;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    background-color: #FDD023;
+    color: #fff;
     width: 100%;
     height: 300px;
     justify-content: center;
     align-items: center;
+}
 
-    
+label {
+    font-weight: bold;
+    font-size: 16px;
+}
+
+input, label {
+    display: block;
+}
+
+input {
+    box-sizing: border-box;
+    margin: 10px;
+    width: 300px;
+    border-radius: 4px;
+    height: 30px;
 }
 
 .bottom {
@@ -62,8 +102,10 @@ aside {
 .btn {
     padding: 20px 60px;
     border-radius: 8px;
+    font-weight: 900;
+    font-size: 1rem;
+
+    color: #fff;
+    background-color: #FDD023;
 }
 
-.email {
-    margin-left: 10px;
-}
